deploy/kubernetes/ingress/k3d-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  tls:
  - hosts:
    - cht-dev.local-ip.medicmobile.org
    secretName: api-tls-secret
  rules:
  - host: cht-dev.local-ip.medicmobile.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api
            port:
              number: 5988
